force-app/main/default/objects/animalos__Animal_Contact_Relationship__c/animalos__Animal_Contact_Relationship__c.object-meta.xml
<CustomObject>
    <label>Animal Contact Relationship</label>
    <nameField>
        <displayFormat>ACR{00000}</displayFormat>
        <label>Animal Contact Relationship ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Animal Contact Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>