force-app/main/default/objects/animalos__Animal_Contact_Relationship__c/fields/animalos__Animal_Status__c.field-meta.xml
<CustomField>
    <fullName>animalos__Animal_Status__c</fullName>
    <formula>TEXT(animalos__Animal__r.animalos__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Animal Status</label>
    <type>Text</type>
</CustomField>