force-app/main/default/objects/animalos__Animal_Contact_Relationship__c/fields/animalos__Contact__c.field-meta.xml
<CustomField>
    <fullName>animalos__Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Animal Contact Relationships</relationshipLabel>
    <relationshipName>Animal_Contact_Relationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>