force-app/main/default/objects/animalos__Animal_Contact_Relationship__c/fields/animalos__Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>animalos__Contact_Name__c</fullName>
    <formula>animalos__Contact__r.FirstName &amp; &apos; &apos; &amp; animalos__Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>