force-app/main/default/objects/animalos__Animal_Contact_Relationship__c/fields/animalos__Deceased__c.field-meta.xml
<CustomField>
    <fullName>animalos__Deceased__c</fullName>
    <formula>IF (animalos__Animal__r.animalos__Deceased__c=True,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deceased</label>
    <type>Checkbox</type>
</CustomField>