force-app/main/default/objects/animalos__Animal_Contact_Relationship__c/fields/animalos__Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>animalos__Relationship_Type__c</fullName>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>